<resources>
    <!--<string name="root_url">https://web-restapi-services-01-dr5.conveyor.cloud/Service1.svc</string>-->
    <!--<string name="root_url">localhost/webandtrace/api/sel/1.01/global/</string>-->
    <!--string name="root_url">http://192.168.0.17/webandtrace/seltransport/1.01</string-->
    <string name="root_url">https://www.webandtrace.com/seltransport/1.01</string>
    <string name="app_name">SelExped Transport</string>
    <string name="reg_token">eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ1c2VyTmFtZSI6IkFuZHJvaWQgcmVnIiwicmVnaXN0cmF0aW9uS2V5IjoiNDJEQkM1QkVBMDE4NjkyMUMzNDUzQTU0OTdERUFCNEZDNTRFNzI5N0MyQ0M3QkVCMTY1QTYwNTM4NTY2OEZFRkNDNDlBQTU4QjNGODI5N0U1MkFFRjEzRURFNDlCQTY1QjRFRTEwMkYwRkJDQkQyMjQzRjhGODlBODg0OTM2MTQiLCJpYXQiOjE1OTAwNjg3MTAsImV4cCI6NDc0MzY2ODcxMH0.NRWjHKyRtLs-6BcztKZQNdPfKSjO7wsoARn0W79jxxo</string>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="hungarian">Magyar</string>
    <string name="english">English</string>
    <string name="deutsch">Deutsch</string>
    <string name="username">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="code">Kód</string>
    <string name="tasks">Feladatok</string>
    <string name="transports">Szállítások</string>
    <string name="addresses">Címek</string>
    <string name="settings">Beállítások</string>
    <string name="information">Információ</string>
    <string name="details">Részletek</string>
    <string name="retry">Újra</string>
    <string name="must_login">A SelExeped Transport a SelExped szoftvercsomag mobil alkalmazása fuvarosok számára.
        A regisztráció meghívásos elven működik. Bővebb információért látogasson el <a href="https://www.selester.hu/index.php/hu/">honlapunkra.</a></string>
    <string name="v_1_0">v 1.0</string>
    <string name="welcome">Üdvözöljük</string>
    <string name="recipient_name"><u>Átvevő név:</u></string>
    <string name="name">Név:</string>
    <string name="contractor_name">Megbízó név:</string>
    <string name="load_address">Felrakási cím:</string>
    <string name="unload_address">Lerakási cím:</string>
    <string name="address">Cím:</string>
    <string name="info">Információ:</string>
    <string name="remarks">Megjegyzés:</string>
    <string name="telephone">Telefon:</string>
    <string name="tel_num_placeholder">201234567</string>
    <string name="signature">Aláírás</string>
    <string name="cancel">Mégsem</string>
    <string name="set">Beállítás</string>
    <string name="ok">OK</string>
    <string name="send">Küldés</string>
    <string name="exit">Kilépés</string>
    <string name="login">Bejelentkezés</string>
    <string name="choose_tel_num">Válassza ki a telefonszámot!</string>
    <string name="type_tel_num">Adja meg a telefonszámot!</string>
    <string name="new_telephone_number">Új szám hozzáadása</string>
    <string name="clear_inactive">Inaktívak törlése</string>
    <string name="refresh_list">Lista frissítése</string>
    <string name="signatory_name">Aláíró neve…</string>
    <string name="doc_scan">Dokumentum scan</string>
    <string name="search_on_phone">Keresés a telefonon</string>
    <string name="tracking">Nyomkövetés</string>
    <string name="home_screen">Kezdőképernyő</string>
    <string name="synchronize">Szinkronizálás</string>
    <string name="choose_language">Nyelvválasztás</string>
    <string name="registration_edit">Regisztrácók kezelése</string>
    <string name="login_please">Jelentkezzen be</string>
    <string name="delete">Törlés</string>
    <string name="lock_transport">Szállítás lezárása</string>
    <string name="lock">Lezárás</string>
    <string name="logistic_status">Logisztikai státusz</string>
    <string name="open_map">Megjelenítés a térképen</string>
    <string name="goods_details">Áru adatok</string>
    <string name="data_entry">Adat rögzítés</string>
    <string name="signed">Aláírva</string>
    <string name="unsigned">Nincs aláírva</string>
    <string name="more_info">További információ megtekintése.</string>
    <string name="id_number">Azonosító szám:</string>
    <string name="description">Megnevezés:</string>
    <string name="amount">Darabszám:</string>
    <string name="packaging">Csomagolás:</string>
    <string name="weight">Súly:</string>
    <string name="space">Rakhossz:</string>
    <string name="volume">Térfogat:</string>
    <string name="dimensions">Dimenzió:</string>
    <string name="l_w_h">(HxSzxM)</string>
    <string name="delete_registrations">A telefonszám N eszközön van regisztrálva. Szeretné ezeket törölni?</string>
    <string name="unknown_qr_code">Hiba: Nem értelmezhető QR kód!</string>
    <string name="no_map_app">Kérem, telepítsen egy térkép alkalmazást!</string>
    <string name="procedures">Műveletek</string>
    <string name="all_addresses">Összes cím</string>
    <string name="leftover_addresses">Hátralévő címek</string>
    <string name="done_addresses">Kész címek</string>
    <string name="delete_photo_confirm">Biztos, hogy törli a fotót?</string>
    <string name="yes">Igen</string>
    <string name="no">Nem</string>
    <string name="photo_added_already">Ezt a fotót már egyszer hozzáadta!</string>
    <string name="photo_save_error">Hiba a kép mentése közben!</string>
    <string name="further_information">Bővebb információ</string>
    <string name="identification_error">Hiba az azonosítás közben</string>
    <string name="user_exists_already">Ez a telefonszám már létezik, kérem válassza ki a listából!</string>
    <string name="provide_valid_phone_number">Kérem, valós telefonszámot adjon meg!</string>
    <string name="waiting_for_sms">Várakozás a regisztrációs SMS-re…</string>
    <string name="no_sms_received">Nem érkezett regisztrációs SMS a kérésre! Kérem ellenőrizze a telefonszámot!</string>
    <string name="no_sms_permission">Nem tudjuk regisztrálni, ha nem engedélyezi bejövő SMS-ek figyelését!</string>
    <string name="no_camera_permission">Nem tud képeket készíteni, ha nem engedélyezi a kamera használatát!</string>
    <string name="no_call_permission">Nem tud telefonhívást indítani, ha nem engedélyezi a telefonhívásokat!</string>
    <string name="no_storage_permission">Nem tud aláírásokat menteni, ha nem engedélyezi a fájlkezelést!</string>
    <string name="close_transport_confirm">Biztosan lezárja a szállítást? A művelet nem vonható vissza.</string>
    <string name="close_transport">Szállítás lezárása</string>
    <string name="communication_error">Hiba a kommunikációban!</string>
    <string name="data_loading">Adatok lekérése folyamatban</string>
    <string name="provide_data">Adja meg a megfelelő adatot!</string>
    <string name="camera">camera</string>
    <string name="search">Keresés…</string>
    <string name="powered_by">Powered by Selester Kft.</string>
    <string name="more_details">Bővebben \>\></string>
    <string name="last_status">A jelenlegi státusz (%1$s) a végső. Státuszváltás nem lehetséges.</string>
    <string name="goods_statistics">%1$d colli, %2$d kg, %3$.2f m3, %4$.2f lm</string>
    <string name="n_pictures_taken">%1$d kép készítve</string>
    <string name="change_logistic_status">Biztosan megváltoztatja a logisztikai státuszt a következőre: %1$s? A művelet nem vonható vissza.</string>
    <string name="map">Térkép</string>
</resources>
