<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
                android:id="@+id/menu_home"
                android:icon="@drawable/home"
                android:title="@string/home_screen" />
    </group>

    <group>
        <item
                android:id="@+id/menu_synchronize"
                android:icon="@drawable/refresh"
                android:title="@string/synchronize" />
        <item
                android:id="@+id/menu_clear_inactive"
                android:icon="@drawable/delete"
                android:title="@string/clear_inactive" />
    </group>

    <group>
        <item
                android:id="@+id/menu_choose_language"
                android:icon="@drawable/set_language"
                android:title="@string/choose_language" />
        <item
                android:id="@+id/menu_registration_edit"
                android:icon="@drawable/registration_edit"
                android:title="@string/registration_edit" />
    </group>

    <group>
        <item
                android:id="@+id/menu_exit"
                android:icon="@drawable/exit"
                android:title="@string/exit" />
    </group>
</menu>
