<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signature_head_cover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <include
                android:id="@+id/signature_head"
                layout="@layout/part_address_header" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
            android:id="@+id/signature_signatory"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/signatory"
            app:layout_constraintStart_toStartOf="@id/signature_inner_layout"
            app:layout_constraintTop_toBottomOf="@id/signature_head_cover" />

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:hint="@string/signatory_name"
            app:layout_constraintBottom_toBottomOf="@id/signature_signatory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/signature_signatory"
            app:layout_constraintTop_toTopOf="@id/signature_signatory" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signature_inner_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            android:background="#00BCD4"
            app:layout_constraintBottom_toTopOf="@id/signature_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signature_signatory">

        <com.kyanogen.signatureview.SignatureView
                android:id="@+id/signature_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                app:backgroundColor="#ffffff"
                app:enableSignature="true"
                app:layout_constraintBottom_toBottomOf="@id/signature_inner_layout"
                app:layout_constraintEnd_toEndOf="@id/signature_inner_layout"
                app:layout_constraintStart_toStartOf="@id/signature_inner_layout"
                app:layout_constraintTop_toTopOf="parent"
                app:penColor="#000000"
                app:penSize="5dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
            android:id="@+id/signature_clear"
            style="@style/button_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/retry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/signature_save"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
            android:id="@+id/signature_save"
            style="@style/button_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/signature_clear" />
</androidx.constraintlayout.widget.ConstraintLayout>