<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/login_backgroundPic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:scrollX="-100dp"
            android:src="@drawable/login_back" />

    <LinearLayout
            android:id="@+id/login_headerLine"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/shadow_layout"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/login_backgroundPic" />

    <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/login_logo_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <ImageView
            android:id="@+id/login_setting"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/setting_icon"
            app:layout_constraintEnd_toEndOf="@+id/login_headerLine"
            app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:background="#556f6f6f"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/login_headerLine">

        <TextView
                android:id="@+id/textView4"
                style="@style/login_text_shadow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:shadowColor="@color/blackColor"
                android:text="@string/welcome"
                android:textColor="@color/whiteColor"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/textView2"
                style="@style/login_text_shadow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:shadowColor="@color/blackColor"
                android:text="@string/must_login"
                android:textColor="@color/whiteColor"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/login_version"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <TextView
            android:id="@+id/login_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/v_1_0"
            android:textColor="@color/whiteColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <com.hbb20.CountryCodePicker
            android:id="@+id/login_cc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/whiteColor"
            app:ccp_autoDetectCountry="true"
            app:ccp_countryPreference="hu,hu"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <EditText
            android:id="@+id/login_phonenumber"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="8dp"
            android:background="@color/whiteColor"
            android:hint="telefonszám"
            android:inputType="phone"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="@+id/login_cc"
            app:layout_constraintEnd_toEndOf="@+id/login_headerLine"
            app:layout_constraintStart_toEndOf="@+id/login_cc"
            app:layout_constraintTop_toTopOf="@+id/login_cc" />

    <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:padding="20dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_phonenumber" />

    <ProgressBar
            android:id="@+id/login_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_phonenumber" />

    <TextView
            android:id="@+id/login_errortext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textColor="@color/errorColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_phonenumber" />

</androidx.constraintlayout.widget.ConstraintLayout>
