<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/semiLtGrayColor">
    <TextView
            android:id="@+id/info_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:text="@string/information"
            android:textColor="@color/whiteColor"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_heading">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/ltGrayColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                    android:id="@+id/name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:importantForAutofill="no"
                        android:text="@string/name"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent" />

                <TextView
                        android:id="@+id/name_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:importantForAutofill="no"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/name"
                        tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/address_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name_layout">

                <TextView
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:importantForAutofill="no"
                        android:text="@string/address"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent" />

                <TextView
                        android:id="@+id/address_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:focusable="false"
                        android:importantForAutofill="no"
                        android:inputType="none"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/address"
                        tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/info_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_layout">

                <TextView
                        android:id="@+id/info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="4dp"
                        android:importantForAutofill="no"
                        android:text="@string/info"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent" />

                <TextView
                        android:id="@+id/info_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:focusable="false"
                        android:importantForAutofill="no"
                        android:inputType="none"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/info"
                        tools:ignore="LabelFor" />
            </LinearLayout>

            <Button
                    android:id="@+id/detail_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bővebben"
                    app:layout_constraintStart_toStartOf="@+id/info_layout"
                    app:layout_constraintTop_toBottomOf="@+id/info_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
